cambia colores y ajusta header

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
   <!-- Utilzado por Bosstrap studio -->
   <link rel="stylesheet" href="./assets/clean-page.css">
+  <link rel="stylesheet" href="./assets/colores.css">
 
   </head>
 <body class="container-fluid">
