apply prettier format

--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="utf-8">
-  <title>Agrofrost</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <head>
+    <meta charset="utf-8" />
+    <title>Agrofrost</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta
+      name="google-site-verification"
+      content="HOCpS0gPxF5T6fAaAZcTblyVAN5JaTqzLt3tt4-gDEE"
+    />
 
-  <!-- Utilzado por Bosstrap studio -->
+    <!-- Utilzado por Bosstrap studio -->
 
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="./assets/clean-page.css">
-  <link rel="stylesheet" href="./assets/colores.css"> 
-
+    <link rel="stylesheet" href="./assets/clean-page.css" />
+    <link rel="stylesheet" href="./assets/colores.css" />
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta
+      name="google-signin-client_id"
+      content="66417452803-goil61145cvfq64c2r69fhm4a52l3sb9.apps.googleusercontent.com"
+    />
   </head>
-<body class="container-fluid">
-  <app-root></app-root>
+  <body class="container-fluid">
+    <app-root></app-root>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.bundle.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     <script src="assets/js/vanilla-zoom.js"></script>
     <script src="assets/js/theme.js"></script> -->
-</body>
+  </body>
 </html>
