--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
       name="google-signin-client_id"
       content="66417452803-goil61145cvfq64c2r69fhm4a52l3sb9.apps.googleusercontent.com"
     />
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1885720016268385"
+     crossorigin="anonymous"></script>
   </head>
   <body class="container-fluid">
     <app-root></app-root>
