integrate ads from google adsence

--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,12 @@
       name="google-signin-client_id"
       content="66417452803-goil61145cvfq64c2r69fhm4a52l3sb9.apps.googleusercontent.com"
     />
+<!-- Remplace  the code by satrd code  -->
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1885720016268385"
+     crossorigin="anonymous"></script> -->
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1885720016268385"
-     crossorigin="anonymous"></script>
+     <script async src=//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js></script>
+
   </head>
   <body class="container-fluid">
     <app-root></app-root>
